Small changes to the theme

--- a/themes/theme-jk/layouts/partials/head.html
+++ b/themes/theme-jk/layouts/partials/head.html
@@ -4,13 +4,13 @@
   <link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
   <link href="{{ .RSSLink }}" rel="feed" type="application/rss+xml" title="{{ .Site.Title }}" />
 {{ end }}
-<link href="{{ .Site.BaseURL }}/favicon500.png" rel="apple-touch-icon" />
-<link href="{{ .Site.BaseURL }}/favicon500.png" rel="apple-touch-icon" sizes="76x76" />
-<link href="{{ .Site.BaseURL }}/favicon500.png" rel="apple-touch-icon" sizes="120x120" />
-<link href="{{ .Site.BaseURL }}/favicon500.png" rel="apple-touch-icon" sizes="152x152" />
-<link href="{{ .Site.BaseURL }}/favicon500.png" rel="apple-touch-icon" sizes="180x180" />
-<link href="{{ .Site.BaseURL }}/favicon500.png" rel="icon" sizes="192x192" />
-<link href="{{ .Site.BaseURL }}/favicon500.png" rel="icon" sizes="128x128" />
+<link href="{{ .Site.BaseURL }}favicon500.png" rel="apple-touch-icon" />
+<link href="{{ .Site.BaseURL }}favicon500.png" rel="apple-touch-icon" sizes="76x76" />
+<link href="{{ .Site.BaseURL }}favicon500.png" rel="apple-touch-icon" sizes="120x120" />
+<link href="{{ .Site.BaseURL }}favicon500.png" rel="apple-touch-icon" sizes="152x152" />
+<link href="{{ .Site.BaseURL }}favicon500.png" rel="apple-touch-icon" sizes="180x180" />
+<link href="{{ .Site.BaseURL }}favicon500.png" rel="icon" sizes="192x192" />
+<link href="{{ .Site.BaseURL }}favicon500.png" rel="icon" sizes="128x128" />
 
 <title>{{ .Title }} &middot; {{ .Site.Title }}</title>
-<link rel="stylesheet" href="{{ .Site.BaseURL }}/css/tufte.css">
+<link rel="stylesheet" href="{{ .Site.BaseURL }}css/tufte.css">
