--- a/themes/theme-jk/static/css/tufte.css
+++ b/themes/theme-jk/static/css/tufte.css
@@ -233,7 +233,7 @@ h1 {
   margin-top: 1.568rem;
   margin-bottom: 0.5rem;
   font-size: 3.0rem;
-  line-height: 0.9;
+  line-height: 1.0;
   font-style: italic; }
 
 h2 {
@@ -260,6 +260,12 @@ p, li {
   margin-top: 1.4rem;
   padding-right: 2rem;
   vertical-align: baseline; }
+
+
+ol { margin-top: 1.4rem;}
+ol li {
+  margin-top: 0rem;
+}
 
 p.subtitle {
   font-style: italic;
@@ -434,6 +440,10 @@ li .sidenote, li .marginnote {
   top: 0rem; }
 
 body.normalpost article p {
+  width: 95%;
+  max-width: 50rem; }
+  
+body.normalpost article ol {
   width: 95%;
   max-width: 50rem; }
 
