Change footer date

--- a/themes/theme-jk/layouts/partials/footer.html
+++ b/themes/theme-jk/layouts/partials/footer.html
@@ -8,7 +8,7 @@
       <a href="{{ .Site.RSSLink }}">rss</a>
       </span></br> </br>
     <span style="letter-spacing: 0.05em;">
-      &copy; {{ dateFormat "2006" now }}
+      &copy; 2015-{{ dateFormat "2006" now }}
       &nbsp;&nbsp;{{ .Site.Author.name | upper }}
     </span></br> </br>
     <span>
