--- a/themes/theme-jk/layouts/partials/footer.html
+++ b/themes/theme-jk/layouts/partials/footer.html
@@ -1,7 +1,7 @@
 <footer>
   <div class="credits">
     <span style="color: grey">
-      <a href="mailto:j.krijthe@cs.ru.nl">mail</a> - 
+      <a href="mailto:j.h.krijthe@tudelft.nl">mail</a> - 
       <a href="https://www.twitter.com/jessekrijthe">twitter</a> - 
       <a href="https://github.com/jkrijthe">github</a> - 
       <a href="https://scholar.google.nl/citations?user=Rm7OUa0AAAAJ">scholar</a> - 
