--- a/themes/theme-jk/layouts/partials/header.html
+++ b/themes/theme-jk/layouts/partials/header.html
@@ -2,10 +2,9 @@
     <nav class="group">
     <span></span><a href="/" style="color: black">Jesse Krijthe</a>
 		<a href="/"><img class="badge" src="/img/badge_1.png" alt="JK" style="top: -0.5em; height: 2em; width: 2em"></a></span>
-    <a href="/">Notes</a>
+    <a href="/articles">Notes</a>
 		<a href="/papers">Papers</a>
 		<a href="https://github.com/jkrijthe">Code</a>
-		<a href="/cv.pdf">CV</a>
 		<a href="/about">About</a>
 	</nav>
 </header>
