--- a/themes/theme-jk/layouts/articles/list.html
+++ b/themes/theme-jk/layouts/articles/list.html
@@ -9,14 +9,15 @@
   <div class="container">
     {{ partial "header.html" . }}
     <div class="content">
-      <h1 class="content-listing-header sans">Articles</h1>
+      <h1 class="content-listing-header sans">Notes</h1>
       <hr class="slender" width="200em" />
       <ul class="content-listing ">
 
     {{ $paginator := .Paginate (where .Data.Pages "Type" "articles") }} {{ range $paginator.Pages }}
-        <li class="listing">
+        <li class="listing" style="margin-bottom: 0.8em">
           <a href="{{ .Permalink }}"><h3>{{ .Title }}</h3></a>
-          <br><span class="smaller">{{ .Date.Format "January 2, 2006" }}</span>  <br/>
+          <br><span style="font-family: Lato; margin-right: 0.5em; letter-spacing: 0.1em;
+  text-transform: uppercase; font-size: 0.8rem; color: #BFB8A0">{{ .Params.categories }} </span><span class="smaller">{{ .Date.Format "January 2, 2006" }}</span> <br/>
         </li>
     {{ end }}
   </ul>
