--- a/themes/theme-jk/layouts/partials/footer.html
+++ b/themes/theme-jk/layouts/partials/footer.html
@@ -5,7 +5,7 @@
       <a href="https://www.twitter.com/jessekrijthe">twitter</a> - 
       <a href="https://github.com/jkrijthe">github</a> - 
       <a href="https://scholar.google.nl/citations?user=Rm7OUa0AAAAJ">scholar</a> - 
-      <a href="{{ .Site.RSSLink }}">rss</a>
+      <a href="{{ with .OutputFormats.Get "RSS" }}{{ .RelPermalink }}{{ end }}">rss</a>
       </span></br> </br>
     <span style="letter-spacing: 0.05em;">
       &copy; 2015-{{ dateFormat "2006" now }}
