--- a/themes/theme-jk/layouts/partials/head.html
+++ b/themes/theme-jk/layouts/partials/head.html
@@ -1,9 +1,8 @@
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
-{{ if .RSSLink }}
-  <link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
-  <link href="{{ .RSSLink }}" rel="feed" type="application/rss+xml" title="{{ .Site.Title }}" />
-{{ end }}
+{{ with .OutputFormats.Get "rss" -}}
+    {{ printf `<link rel="%s" type="%s" href="%s" title="%s" />` .Rel .MediaType.Type .Permalink $.Site.Title | safeHTML }}
+{{ end -}}
 <link href="{{ .Site.BaseURL }}favicon500.png" rel="apple-touch-icon" />
 <link href="{{ .Site.BaseURL }}favicon500.png" rel="apple-touch-icon" sizes="76x76" />
 <link href="{{ .Site.BaseURL }}favicon500.png" rel="apple-touch-icon" sizes="120x120" />
